# adata_util

./: .gitignore  LICENSE  README.md  pyproject.toml
adata_util/: __init__.py  cli.py
adata_util/commands/: __init__.py  concat.py  join.py  plot.py  plot_embedding.py  scanpy_cmd.py  score_genes.py  split.py  utils.py  view.py
test/: __init__.py  conftest.py  test_concat.py  test_join.py  test_plot.py  test_plot_embedding.py  test_scanpy.py  test_score_genes.py  test_split.py  test_utils.py  test_view.py
