[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adata_util"
version = "0.1.0"
description = "A CLI for operating on AnnData objects (h5ad files)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12,<0.13",
    "scanpy>=1.12,<2",
    "pandas>=2.0,<3",
    "argcomplete>=3.0,<4",
    "pyyaml>=6.0,<7",
]

[project.scripts]
adata_util = "adata_util.cli:main"

[tool.setuptools.packages.find]
where = ["."]
